-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18, 19
-
Component/s: hotspot
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288831 | 17.0.5-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8288957 | 17.0.5 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
The following test fail in the JDK17 CI on macos-aarch64:
2 compiler/whitebox/ClearMethodStateTest.java
1 compiler/whitebox/EnqueueMethodForCompilationTest.java
4 compiler/whitebox/MakeMethodNotCompilableTest.java
Here's a log file snippet for one of the failures:
----------System.err:(29/2387)----------
java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
at compiler.whitebox.CompilerWhiteBoxTest.checkCompiled(CompilerWhiteBoxTest.java:258)
at compiler.whitebox.EnqueueMethodForCompilationTest.test(EnqueueMethodForCompilationTest.java:86)
at compiler.whitebox.CompilerWhiteBoxTest.runTest(CompilerWhiteBoxTest.java:170)
at compiler.whitebox.CompilerWhiteBoxTest.main(CompilerWhiteBoxTest.java:129)
at compiler.whitebox.EnqueueMethodForCompilationTest.main(EnqueueMethodForCompilationTest.java:53)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
at compiler.whitebox.CompilerWhiteBoxTest.checkCompiled(CompilerWhiteBoxTest.java:258)
at compiler.whitebox.EnqueueMethodForCompilationTest.test(EnqueueMethodForCompilationTest.java:86)
at compiler.whitebox.CompilerWhiteBoxTest.runTest(CompilerWhiteBoxTest.java:170)
at compiler.whitebox.CompilerWhiteBoxTest.main(CompilerWhiteBoxTest.java:129)
at compiler.whitebox.EnqueueMethodForCompilationTest.main(EnqueueMethodForCompilationTest.java:53)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
JavaTest Message: Test threw exception: java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
----------rerun:(49/9757)*----------
2 compiler/whitebox/ClearMethodStateTest.java
1 compiler/whitebox/EnqueueMethodForCompilationTest.java
4 compiler/whitebox/MakeMethodNotCompilableTest.java
Here's a log file snippet for one of the failures:
----------System.err:(29/2387)----------
java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
at compiler.whitebox.CompilerWhiteBoxTest.checkCompiled(CompilerWhiteBoxTest.java:258)
at compiler.whitebox.EnqueueMethodForCompilationTest.test(EnqueueMethodForCompilationTest.java:86)
at compiler.whitebox.CompilerWhiteBoxTest.runTest(CompilerWhiteBoxTest.java:170)
at compiler.whitebox.CompilerWhiteBoxTest.main(CompilerWhiteBoxTest.java:129)
at compiler.whitebox.EnqueueMethodForCompilationTest.main(EnqueueMethodForCompilationTest.java:53)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
at compiler.whitebox.CompilerWhiteBoxTest.checkCompiled(CompilerWhiteBoxTest.java:258)
at compiler.whitebox.EnqueueMethodForCompilationTest.test(EnqueueMethodForCompilationTest.java:86)
at compiler.whitebox.CompilerWhiteBoxTest.runTest(CompilerWhiteBoxTest.java:170)
at compiler.whitebox.CompilerWhiteBoxTest.main(CompilerWhiteBoxTest.java:129)
at compiler.whitebox.EnqueueMethodForCompilationTest.main(EnqueueMethodForCompilationTest.java:53)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:831)
JavaTest Message: Test threw exception: java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled
----------rerun:(49/9757)*----------
- backported by
-
JDK-8288831 several compiler/whitebox tests fail with "private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled"
-
- Resolved
-
-
JDK-8288957 several compiler/whitebox tests fail with "private compiler.whitebox.SimpleTestCaseHelper(int) must be compiled"
-
- Resolved
-
- duplicates
-
JDK-8282032 Test fails with "no compiler for requested compilation level"
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/e0750eb7
-
Commit
openjdk/jdk/4434c7df
-
Review
openjdk/jdk17u-dev/484
-
Review
openjdk/jdk/8473
(2 links to)